--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
         stage('Hello') {
             steps {
                 echo 'Hello from Jenkins Pipeline!'
+                echo 'how are you fellas ?'
             }
         }
     }
