--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,5 +1,17 @@
 version: '3'
 services:
+  backend:
+    build: .
+    ports:
+      - 5000:5000
+    env_file:
+      - .env
+    depends_on:
+      - mongo
+      - redis
+    volumes:
+      - .:/app
+      - /app/node_modules
   mongo:
     image: mongo
     ports:
