--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - ../frontend/dist:/app/public
   mongo:
     image: mongo
     ports:
